--- a/index.css
+++ b/index.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.cdnfonts.com/css/formular');
+@import url("https://fonts.cdnfonts.com/css/formular");
 
 * {
   margin: 0px;
   padding: 0px;
-  font-family: 'Formular', sans-serif;
+  font-family: "Formular", sans-serif;
 }
 
 /* Variables */
@@ -35,13 +35,12 @@ header {
   align-items: center;
 }
 
-.navigate_list > *{
-      box-sizing: border-box;
-        padding: 10px 21px;
+.navigate_list > * {
+  box-sizing: border-box;
+  padding: 10px 21px;
 }
 
 .navigate_list > *:hover {
-   
   background-color: var(--color-gray_light);
   cursor: pointer;
 
@@ -56,7 +55,7 @@ header {
   border-radius: 32.5px;
 }
 
-.header_button:hover{
-    box-shadow: 0px 10px 20px 0px rgba(255, 45, 35, 0.3);
-    cursor: pointer;
+.header_button:hover {
+  box-shadow: 0px 10px 20px 0px rgba(255, 45, 35, 0.3);
+  cursor: pointer;
 }
