fix font family

--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
 * {
   margin: 0px;
   padding: 0px;
-  font-family: "Formular", sans-serif;
+  font-family: Formular, Helvetica Now, Helvetica, Arial, sans-serif; ;
 }
 
 /* Variables */
